# services/server/internal/usage/handlers/middleware.go
@@ -19,7 +19,7 @@ func UsageTrackingMiddleware(repo repos.UsageRepository) shared.StrictMiddleware
 			response, err := f(ctx, request)
 
 			userID, ok := authhandlers.GetUserID(ctx.Request.Context())
-			if ok && operationID != "GetUsage" {
+			if ok && operationID != "GetUsage" && operationID != "GetUsageStats" {
 				if recordErr := repo.Record(ctx.Request.Context(), &models.Usage{
 					Timestamp: time.Now().UTC(),
 					UserID:    userID,
